# insta360-gstreamer

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  start_client.sh  start_server.sh
src/: config.h  streamer.cpp
